try fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,11 @@ img {
 
 /* VIDEO */
 main {
-  overflow: hidden;
+  overflow: hidden !important;
+}
+
+section {
+  overflow: hidden !important;
 }
 
 #landing-page .ms_video_box {
@@ -116,8 +120,7 @@ main {
   height: 100vh;
 }
 
-#video-showreel,
-iframe {
+#video-showreel {
   position: absolute;
   top: 50%;
   left: 50%;
